 667.	[bug]		On Linux, running named with the -u option and a
			non-world-readable configuration file didn't work.
			[RT #626]

 666.	[bug]		If a request sent by dig is longer than 512 bytes,
			use TCP.

 665.	[bug]		Signed responses were not sent when the size of the
			TSIG + question exceeded the maximum message size.
			[RT #628]

 664.	[bug]		The t_tasks and t_timers module tests are now skipped
			when building without threads, since they require
			threads.

 663.	[func]		Accept a size_spec, not just an integer, in the
			(unimplemented and ignored) max-ixfr-log-size option
			for compatibility with recent versions of BIND 8.
			[RT #613]

 662.	[bug]		dns_rdata_fromtext() failed to log certain errors.

 661.	[bug]		Certain UDP IXFR requests caused an assertion failure
			(mpctx->allocated == 0). [RT #355, #394, #623]

 660.	[port]		Detect multiple CPUs on HP-UX and IRIX.

 659.	[performance]	Rewrite the name compression code to be much faster.

 658.	[cleanup]	Remove all vestiges of 16 bit global compression.

 657.	[bug]		When a listen-on statement in an lwres block does not
			specifiy a port, use 921, not 53.  Also update the
			listen-on documentation. [RT #616]

 656.	[func]		Treat an unescaped newline in a quoted string as
			an error.  This means that TXT records with missing
			close quotes should have meaningful errors printed.

 655.	[bug]		Improve error reporting on unexpected eof when loading
			zones. [RT #611]

 654.	[bug]		Origin was being forgotten in TCP retries in dig.
			[RT #574]

 653.	[bug]		+defname option in dig was reversed in sense.  
			[RT #549]

 652.	[bug]		zone_saveunique() did not report the new name.

 651.	[func]		The AD bit in responses now has the meaning
			specified in <draft-ietf-dnsext-ad-is-secure>.

 650.	[bug]		SIG(0) records were being generated and verified
			incorrectly. [RT #606]

 649.	[bug]		It was possible to join to an already running fctx
			after it had "cloned" its events, but before it sent